Creación de los tests para el controlador y el servicio de Appointment.