@@ -83,7 +83,7 @@ public class EmployeeController {
     // *** No hay validaciones menores para realizar
     Optional<Employee> employeeOptional = employeeService.findById(id);
 
-    if (!employeeOptional.isPresent()) {
+    if (employeeOptional.isEmpty()) {
       Map<String, Object> errorDetails = new HashMap<>();
       errorDetails.put("code", "RESOURCE_NOT_FOUND");
       errorDetails.put("message", "The requested resource was not found");
@@ -119,7 +119,7 @@ public class EmployeeController {
 
       return ResponseEntity.ok(response);
     } catch (EntityNotFoundException e) {
-      String errorMessage = String.format("Resource not found with ID: %d", id);
+      String errorMessage = "Resource not found with ID: %d".formatted(id);
       return ResponseEntity.badRequest().body(errorMessage);
     } catch (ResourceNotFoundException e) {
       return ResponseEntity.badRequest().body(e.getMessage());
@@ -134,7 +134,7 @@ public class EmployeeController {
       // Retornamos una respuesta vacía
       return ResponseEntity.noContent().build();
     } catch (EntityNotFoundException e) {
-      String errorMessage = String.format("Resource not found with ID: %d", id);
+      String errorMessage = "Resource not found with ID: %d".formatted(id);
       return ResponseEntity.badRequest().body(errorMessage);
     }
   }
